use redis_tmp_client

--- a/core/dura/dura.conf
+++ b/core/dura/dura.conf
@@ -16,11 +16,11 @@
 #                update: 0                      # 0在redis存在则不更新，即以redis的数据为准；默认1存在也更新，即以mongodb的数据为准                    
 
 
-#redis_send_client,redis_log_client,redis_config_client,redis_job_client,redis_manage_client = redis_pool.redis_init()
+#redis_send_client,redis_log_client,redis_tmp_client,redis_config_client,redis_job_client,redis_manage_client = redis_pool.redis_init()
 
 save:
     -
-        3: 
+        4: 
             -
                 key_pattern: ^job_[^_]{32}$
                 collection: job
@@ -48,10 +48,13 @@ save:
             -
                 key_pattern: ^(session|global).*_[^_]{32}$
                 collection: vars
+            -
+                key_pattern: ^(cluster|server|host).*(_[^_]{32})$
+                collection: target_tmp
                 
 load:
     -
-        3:
+        4:
             -
                 collection: job
                 update: 0
