--- a/deploy.conf
+++ b/deploy.conf
@@ -13,6 +13,13 @@ passwd=my_redis_passwd
 db=1
 
 ;需要跟solve相同
+[redis_tmp]
+host=127.0.0.1
+port=6379
+passwd=my_redis_passwd
+db=2
+
+;需要跟solve相同
 [redis_job]
 host=127.0.0.1
 port=6379
