--- a/core/dura/dura.conf
+++ b/core/dura/dura.conf
@@ -1,4 +1,5 @@
 #redis-mongodb同步配置文件 
+# 支持类型 hash list set string
 # 单个key从mongodb同步到redis时使用save模块的配置
 #save:                                          # 遍历匹配的key后台自动保存到mongodb，无限循环
 #    -
@@ -6,7 +7,7 @@
 #            -                                  #
 #                key_pattern: ^job_[^_]{32}$    # redis匹配的key的正则表达式
 #                collection: job                # 对应存储到mongodb的collection
-#                update: 0                      # hash 0在mongodb存在则不更新，默认1存在则替换更新； list -1全量替换，0不更新，默认1更新只插入不存在的key
+#                update: 0                      # hash set zset string 0在mongodb存在则不更新，默认1存在则替换更新； list -1更新只插入不存在的key，0不更新，默认1全量替换
 #
 #load:                                          # 启动时从mongodb加载到redis，只加载一次                                         
 #    -                                          #
@@ -33,10 +34,10 @@ save:
             -
                 key_pattern: ^log_target_[^_]{32}$
                 collection: target_log
-                update: -1
             -
                 key_pattern: ^log_host_.*$
                 collection: host_log
+                update: -1
             -
                 key_pattern: ^[^_]{32}$
                 collection: log
