--- a/core/dura/dura.conf
+++ b/core/dura/dura.conf
@@ -21,12 +21,6 @@
 
 save:
     -
-        4: 
-            -
-                key_pattern: ^job_[^_]{32}$
-                collection: job
-                update: 0
-    -
         1:
             -
                 key_pattern: ^log_job_[^_]{32}$
@@ -48,18 +42,24 @@ save:
         2:
             -
                 key_pattern: ^(session|global).*_[^_]{32}$
-                collection: vars
+                collection: vars_tmp
             -
-                key_pattern: ^(cluster|server|host).*(_[^_]{32})$
+                key_pattern: ^(cluster|server|host|container).*(_[^_]{32})$
                 collection: target_tmp
     -
         3:
             -
-                key_pattern: ^[^session_].*
+                key_pattern: ^(?!session_).*
                 collection: target
             -
                 key_pattern: ^session_.*
                 collection: session
+    -
+        4: 
+            -
+                key_pattern: ^job_[^_]{32}$
+                collection: job
+                update: 0
     -
         5:
             -
@@ -73,8 +73,26 @@ save:
                 collection: exec
 load:
     -
+        3:
+            -
+                collection: target
+                update: 0
+            -
+                collection: session
+                update: 0
+    -
         4:
             -
                 collection: job
                 update: 0
-
+    -
+        5:
+            -
+                collection: solve_config
+                update: 0
+            -
+                collection: tmpl
+                update: 0
+            -
+                collection: exec
+                update: 0
