optimize tmp info

--- a/core/dura/dura.conf
+++ b/core/dura/dura.conf
@@ -41,18 +41,18 @@ save:
     -
         2:
             -
-                key_pattern: ^(session|global).*_[^_]{32}$
+                key_pattern: ^(session|global).*
                 collection: vars_tmp
             -
-                key_pattern: ^(cluster|server|host|container).*(_[^_]{32})$
+                key_pattern: ^(cluster|server|host|container).*
                 collection: target_tmp
     -
         3:
             -
-                key_pattern: ^(?!session_).*
+                key_pattern: ^(?!session).*
                 collection: target
             -
-                key_pattern: ^session_.*
+                key_pattern: ^session.*
                 collection: session
     -
         4: 
