--- a/core/dura/dura.conf
+++ b/core/dura/dura.conf
@@ -44,7 +44,7 @@ save:
                 key_pattern: ^(session|global).*
                 collection: vars_tmp
             -
-                key_pattern: ^(cluster|server|host|container).*
+                key_pattern: ^(cluster|server|host|container|temp).*
                 collection: target_tmp
     -
         3:
