relative playbook support

--- a/deploy.conf
+++ b/deploy.conf
@@ -42,6 +42,8 @@ db=5
 
 
 [common]
+;solve存放playbook的目录
+playbook_root=/home/weideguo/gitproject/solve/playbook
 ;上传文件的根目录
 file_root=/tmp/solve/
 ;快速任务生成的临时playbook的根目录
