--- a/deploy.conf
+++ b/deploy.conf
@@ -42,8 +42,8 @@ db=5
 
 
 [common]
-;solve存放playbook的目录
-playbook_root=/home/weideguo/gitproject/solve/playbook
+;solve存放playbook的目录，可以不设置自动从redis获取（必须先启动solve）
+;playbook_root=/path_to_solve/playbook
 ;上传文件的根目录
 file_root=/tmp/solve/
 ;快速任务生成的临时playbook的根目录
