--- a/deploy.conf
+++ b/deploy.conf
@@ -42,9 +42,13 @@ db=5
 
 
 [common]
-;solve存放playbook的目录，可以不设置自动从redis获取（必须先启动solve）
-;playbook_root=/path_to_solve/playbook
 ;上传文件的根目录
 file_root=/tmp/solve/
 ;快速任务生成的临时playbook的根目录
 playbook_temp=/tmp/solve/
+;以下参数可以不设置自动从redis获取（必须先启动solve）
+;solve存放playbook的目录
+;playbook_root=/path_to_solve/playbook
+;文件管理服务的信息，如果使用本地的文件管理，则不必设置
+;fileserver_bind=127.0.0.1
+;fileserver_port=9000
