--- a/deploy.conf
+++ b/deploy.conf
@@ -1,54 +1,78 @@
-;需要跟solve相同
+#需要跟solve相同
 [redis_send]
-host=127.0.0.1
-port=6379
-passwd=my_redis_passwd
 db=0
+password=my_redis_passwd
+#使用sentinel则会不必设置以下两项
+host=127.0.0.1
+port=6379
+#是否使用sentinel，注释或为空则不使用
+service_name=mymaster                                                        
+sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]      
 
-;需要跟solve相同
+
+#需要跟solve相同
 [redis_log]
-host=127.0.0.1
-port=6379
-passwd=my_redis_passwd
 db=1
+password=my_redis_passwd
+#使用sentinel则会不必设置以下两项
+host=127.0.0.1
+port=6379
+#是否使用sentinel，注释或为空则不使用
+service_name=mymaster                                                        
+sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
-;需要跟solve相同
+#需要跟solve相同
 [redis_tmp]
-host=127.0.0.1
-port=6379
-passwd=my_redis_passwd
 db=2
+password=my_redis_passwd
+#使用sentinel则会不必设置以下两项
+host=127.0.0.1
+port=6379
+#是否使用sentinel，注释或为空则不使用
+service_name=mymaster                                                        
+sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
-;需要跟solve相同
+#需要跟solve相同
 [redis_job]
-host=127.0.0.1
-port=6379
-passwd=my_redis_passwd
 db=14
+password=my_redis_passwd
+#使用sentinel则会不必设置以下两项
+host=127.0.0.1
+port=6379
+#是否使用sentinel，注释或为空则不使用
+service_name=mymaster                                                        
+sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
-;需要跟solve相同
+#需要跟solve相同
 [redis_config]
-host=127.0.0.1
-port=6379
-passwd=my_redis_passwd
 db=15
-
-;用于存储web后端 配置参数/任务模板以及任务
-[redis_manage]
+password=my_redis_passwd
+#使用sentinel则会不必设置以下两项
 host=127.0.0.1
 port=6379
-passwd=my_redis_passwd
-db=5
+#是否使用sentinel，注释或为空则不使用
+service_name=mymaster                                                        
+sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
+#用于存储web后端 配置参数/任务模板以及任务
+[redis_manage]
+db=5
+password=my_redis_passwd
+#使用sentinel则会不必设置以下两项
+host=127.0.0.1
+port=6379
+#是否使用sentinel，注释或为空则不使用
+service_name=mymaster                                                        
+sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
 [common]
-;上传文件的根目录
+#上传文件的根目录
 file_root=/tmp/solve/
-;快速任务生成的临时playbook的根目录
+#快速任务生成的临时playbook的根目录
 playbook_temp=/tmp/solve/
-;以下参数可以不设置自动从redis获取（必须先启动solve）
-;solve存放playbook的目录
-;playbook_root=/path_to_solve/playbook
-;文件管理服务的信息，如果使用本地的文件管理，则不必设置
-;fileserver_bind=127.0.0.1
-;fileserver_port=9000
+#以下参数可以不设置自动从redis获取（必须先启动solve）
+#solve存放playbook的目录
+#playbook_root=/path_to_solve/playbook
+#文件管理服务的信息，如果使用本地的文件管理，则不必设置
+#fileserver_bind=127.0.0.1
+#fileserver_port=9000
