--- a/deploy.conf
+++ b/deploy.conf
@@ -6,8 +6,8 @@ password=my_redis_passwd
 host=127.0.0.1
 port=6379
 #是否使用sentinel，注释或为空则不使用
-service_name=mymaster                                                        
-sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]      
+#service_name=mymaster                                                        
+#sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]      
 
 
 #需要跟solve相同
@@ -18,8 +18,8 @@ password=my_redis_passwd
 host=127.0.0.1
 port=6379
 #是否使用sentinel，注释或为空则不使用
-service_name=mymaster                                                        
-sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
+#service_name=mymaster                                                        
+#sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
 #需要跟solve相同
 [redis_tmp]
@@ -29,8 +29,8 @@ password=my_redis_passwd
 host=127.0.0.1
 port=6379
 #是否使用sentinel，注释或为空则不使用
-service_name=mymaster                                                        
-sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
+#service_name=mymaster                                                        
+#sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
 #需要跟solve相同
 [redis_job]
@@ -40,8 +40,8 @@ password=my_redis_passwd
 host=127.0.0.1
 port=6379
 #是否使用sentinel，注释或为空则不使用
-service_name=mymaster                                                        
-sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
+#service_name=mymaster                                                        
+#sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
 #需要跟solve相同
 [redis_config]
@@ -51,8 +51,8 @@ password=my_redis_passwd
 host=127.0.0.1
 port=6379
 #是否使用sentinel，注释或为空则不使用
-service_name=mymaster                                                        
-sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
+#service_name=mymaster                                                        
+#sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
 #用于存储web后端 配置参数/任务模板以及任务
 [redis_manage]
@@ -62,8 +62,8 @@ password=my_redis_passwd
 host=127.0.0.1
 port=6379
 #是否使用sentinel，注释或为空则不使用
-service_name=mymaster                                                        
-sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
+#service_name=mymaster                                                        
+#sentinels=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]  
 
 [common]
 #上传文件的根目录
