--- a/deploy.conf
+++ b/deploy.conf
@@ -73,16 +73,16 @@ port=6379
 #logout               #登出(前端使用)
 #validate             #验证ticket 返回text格式 (后端使用)
 #serviceValidate      #验证ticket 返回xml格式  (后端使用)
-url=http://192.168.253.128:9095/cas
+#url=http://192.168.253.128:9095/cas
 
 [mongodb]
 # 用于持久保存redis的数据 不使用持久化则注释或设置为空
 # 如果不设置，则数据全部存在redis中，过期则清除
-host=127.0.0.1
-port=27017
-db=solve
-user=solve
-passwd=solve123456
+#host=127.0.0.1
+#port=27017
+#db=solve
+#user=solve
+#passwd=solve123456
 
 [common]
 #上传文件的根目录
