optimize: session vars move to new redis db

--- a/dura/dura.conf
+++ b/dura/dura.conf
@@ -49,11 +49,8 @@ save:
     -
         3:
             -
-                key_pattern: ^(?!session).*
+                key_pattern: .*
                 collection: target
-            -
-                key_pattern: ^session.*
-                collection: session
     -
         4: 
             -
@@ -71,14 +68,14 @@ save:
             -
                 key_pattern: ^exec:.*
                 collection: exec
+            -
+                key_pattern: ^session.*
+                collection: session                
 load:
     -
         3:
             -
                 collection: target
-                update: 0
-            -
-                collection: session
                 update: 0
     -
         4:
@@ -95,4 +92,7 @@ load:
                 update: 0
             -
                 collection: exec
+                update: 0
+            -
+                collection: session
                 update: 0
