--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,17 @@
 [run]
 branch = True
 source = .
+omit =
+    auth_new/migrations/*
+    core/migrations/*    
+    */tests.py
+    conf/lang/*
+    set_config.py
+    manage.py
+    setting/wsgi.py 
+    */management/*
+
 
 [report]
 show_missing = True
+skip_covered = True
