--- a/requirements3.9.txt
+++ b/requirements3.9.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.1
 configparser==7.2.0
 Django==4.2.20
 django-cors-headers==4.7.0
+django-environ==0.12.0
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
