add: temporary token support

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 SECRET_KEY=CHANGE_ME_IN_PRODUCTION!!!
+# not sentinel
+REDIS_URL=redis://:my_redis_passwd@127.0.0.1:6379/6
+# sentinel
+#REDIS_SENTINEL=[('127.0.0.1', 26479),('127.0.0.1', 26480),('127.0.0.1', 26481)]
+#REDIS_URL=redis://mymaster/6
+#REDIS_PASSWORD=my_redis_passwd
